Start of component 3

--- a/index.html
+++ b/index.html
@@ -258,6 +258,30 @@
       </div>
     </section>
 
+    <!--Features-->
+    <div>
+      <div
+        class="border-red-500 container mx-auto py-10 flex flex-col items-center justify center mt-12"
+      >
+        <h1
+          class="mb-4 text-4xl font-extra-bold text-dark-grey-900 text-center-"
+        >
+          Advanced Online Banking Platform
+        </h1>
+        <!--Header section-->
+        <p class="text-lg text-center w-7/12 text-grey-700">
+          A cutting-edge, intuitive online banking interface with features like
+          API intergration, allowing developers too seamlessly manage fiancnes
+          alongside their coding projects.
+        </p>
+      </div>
+      <!--End Of Header section-->
+
+      <!--Card Section-->
+
+      <div class="border border-s-red-500 grid-col-3 gap-10"></div>
+    </div>
+
     <div class="w-full">
       <!-- Wide full-width container for additional content -->
     </div>
