Made the screen functional when it is zoomed out.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body class="bg-gray-100">
-  <div class="mx-auto bg-white">
+  <div class="container  px-4 sm:px-6 lg:px-80 bg-white">
     <div
       class="relative flex flex-wrap items-center justify-between w-full shrink-0"
     >
