Updating a tags on component 1

--- a/index.html
+++ b/index.html
@@ -42,22 +42,22 @@
         class="hidden md:flex items-center justify-between gap-12 text-black"
       >
         <a
-          href=""
+          href="javascript:void(0)"
           class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
           >Product</a
         >
         <a
-          href=""
+          href="javascript:void(0)"
           class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
           >Features</a
         >
         <a
-          href=""
+          href="javascript:void(0)"
           class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
           >Get Started</a
         >
         <a
-          href=""
+          href="javascript:void(0)"
           class="text-sm font-normal text-dark-grey-700 hover:text-dark-grey-900"
           >Contact</a
         >
