Added Nav tags to the navigation menu for Comp 1

--- a/index.html
+++ b/index.html
@@ -25,19 +25,21 @@
   <link rel="stylesheet" href="./assets/css/theme.css" />
   <link rel="stylesheet" href="./assets/css/loopple/loopple.css" />
 </head>
+<!--Component 1-->
 
 <body class="bg-gray-100">
-  <div class="container  px-4 sm:px-6 lg:px-80 bg-white">
-    <div
-      class="relative flex flex-wrap items-center justify-between w-full shrink-0"
+  <div class="container  px-4 sm:px-6 lg:px-80 bg-white"> <!--Added small screen functionality-->
+    <nav
+      class="relative flex flex-wrap items-center justify-between w-full shrink-0 py-7"
     >
       <div class="px-4">
+        <!--Logo-->
         <img
           class="h-8"
           src="assets/component-1/navigation/cache-bank-logo.png"
         />
       </div>
-
+        <!--Nav bar-->
       <div
         class="hidden md:flex items-center justify-between gap-12 text-black"
       >
@@ -141,7 +143,7 @@
           Sign Up
         </button>
       </div>
-    </div>
+    </nav>
 
     <!-- Hero and Endorsements -->
     <!--Hero-->
