--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body class="bg-grey-100">
   <div class="container px-4 sm:px-6 lg:px-80 bg-white"> <!--Container with padding adjustments for different screen sizes-->
-    <nav
+    <div
       class="relative flex flex-wrap items-center justify-between w-full shrink-0 py-7"
     >
       <div class="px-4">
