Updated typo on note

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       class="relative flex flex-wrap items-center justify-between w-full shrink-0 py-7"
     >
       <div class="px-4">
-        <!--Cashe bankogo-->
+        <!--Cashe bank logo-->
         <img
           class="h-8"
           src="assets/component-1/navigation/cache-bank-logo.png" alt="Cashe-bank-logo"
